--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                gloss-tutorial
+name:                haskell-is-you
 version:             0.1.0.0
-github:              "githubuser/gloss-tutorial"
+github:              "githubuser/haskell-is-you"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/gloss-tutorial#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/haskell-is-you#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -26,7 +26,7 @@ library:
   source-dirs: src
 
 executables:
-  gloss-tutorial-exe:
+  haskell-is-you-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -36,12 +36,12 @@ executables:
     dependencies:
     - gloss
     - gloss-juicy
-    - gloss-tutorial
+    - haskell-is-you
     - containers
     - random
 
 tests:
-  gloss-tutorial-test:
+  haskell-is-you-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -49,4 +49,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - gloss-tutorial
+    - haskell-is-you
