--- a/haskell-is-you.cabal
+++ b/haskell-is-you.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4a65bdae448bdf2b3329018de1c738745b03d494876b916b4f31f39d4a609766
+-- hash: 935d417d8a3264789db6d1d25a59d1d6481252716c9f33ff88263981ca8e56c6
 
 name:           haskell-is-you
 version:        0.1.0.0
@@ -28,10 +28,10 @@ source-repository head
 library
   exposed-modules:
       Action
+      Character
       Direction
       Draw
       Keyboard
-      Object
       Rule
       Stage
       Text
