--- a/haskell-is-you.cabal
+++ b/haskell-is-you.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 37d4ae4c85c55fc1c1477a0e601968fefef6571594270c5a3f170143766f0734
+-- hash: 934773b4fb6c76538ec884919f6ff5349bd5fb2323113034d3a9fd04986afe9f
 
 name:           haskell-is-you
 version:        0.1.0.0
@@ -44,9 +44,11 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , filepath
     , gloss
     , gloss-juicy
     , split
+    , text
   default-language: Haskell2010
 
 executable haskell-is-you-exe
@@ -59,7 +61,6 @@ executable haskell-is-you-exe
   build-depends:
       base >=4.7 && <5
     , containers
-    , filepath
     , gloss
     , gloss-juicy
     , haskell-is-you
